<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.account.AccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:menu="@menu/account_finance_app_bar_menu_account"
            app:navigationIcon="@drawable/account_finance_ic_arrow_back"
            app:navigationIconTint="@color/core_md_theme_light_onPrimary"
            app:title="@string/account_finance_text_toolbar_account"
            app:titleTextColor="@color/core_md_theme_light_onPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_new_account_value"
        style="@style/CoreStyleTextSize24Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/account_finance_text_view_new_account_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_new_account" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_new_account_value"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_new_account_value">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_input_new_account_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_finance_text_hint_new_account_value"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_new_account_name"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_new_account_value">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_input_new_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_finance_text_hint_new_account_name"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_new_account_category"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="8dp"
        android:hint="@string/account_finance_text_hint_new_account_category"
        android:textColor="@color/core_seed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_new_account_name">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_account"
        style="@style/CoreStyleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/account_finance_text_button_account_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_new_account_description"
        app:layout_constraintVertical_bias="0.166" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_new_account_description"
        style="@style/CoreStyleTextSize16Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="304dp"
        android:text="@string/account_finance_text_view_new_account_description"
        android:textColor="@color/core_seed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_new_account_category" />
</androidx.constraintlayout.widget.ConstraintLayout>